[project]
name = "shifting-driver"
version = "0.1.0"
description = "Optotune ICC-4C / XRP-20 beam shifter control driver"
requires-python = ">=3.12"
dependencies = [
    "optoicc",
    "optokummenberg",
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shifting_driver"]

[tool.uv.sources]
optoicc = { path = "../../opt_materials/ICC-4C_PythonSDK_2.0.5256/optoicc-2.0.5256-py3-none-any.whl" }
optokummenberg = { path = "../../opt_materials/ICC-4C_PythonSDK_2.0.5256/optokummenberg-1.0.5256-py3-none-any.whl" }
